Platforms and tags for galaxy

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,6 +11,17 @@ galaxy_info:
       versions:
         - trusty
         - xenial
+    - name: EL
+      versions:
+        - 7
+        - 6
   galaxy_tags:
     - system
+    - BitBucket
+    - git
+    - Atlassian
+    - centos
+    - Ubuntu
+    - redhat
+    - rhel
 dependencies: []
