--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -69,8 +69,7 @@
     group: "root"
     mode: "0755"
   when: 
-    (ansible_os_family == 'Ubuntu') or 
-    (ansible_os_family == 'Fedora')
+    (ansible_os_family == 'Ubuntu')
   tags: hswong3i.bitbucket
 
 - name: copy init systemd
@@ -82,7 +81,9 @@
     mode: "0755"
   when: 
     (ansible_os_family == 'RedHat' and ansible_distribution_version >= '7') or 
-    (ansible_os_family == 'CentOS' and ansible_distribution_version >= '7')
+    (ansible_os_family == 'CentOS' and ansible_distribution_version >= '7') or 
+    (ansible_os_family == 'Debian' and ansible_distribution_version >= '7') or
+    (ansible_os_family == 'Fedora' and ansible_distribution_version >= '15') 
   tags: hswong3i.bitbucket
 
 - name: reload systemd
