--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -80,8 +80,8 @@
     group: "root"
     mode: "0755"
   when: 
-    (ansible_os_family == 'RedHat' and ansible_distribution_version >= '7') or 
-    (ansible_os_family == 'CentOS' and ansible_distribution_version >= '7') or 
+    (ansible_os_family == 'RedHat' and ansible_distribution_version >= '7') or
+    (ansible_os_family == 'CentOS' and ansible_distribution_version >= '7') or
     (ansible_os_family == 'Debian' and ansible_distribution_version >= '7') or
     (ansible_os_family == 'Fedora' and ansible_distribution_version >= '15') 
   tags: hswong3i.bitbucket
@@ -90,7 +90,9 @@
   systemd: name=bitbucket daemon_reload=yes
   when: 
     (ansible_os_family == 'RedHat' and ansible_distribution_version >= '7') or 
-    (ansible_os_family == 'CentOS' and ansible_distribution_version >= '7')
+    (ansible_os_family == 'CentOS' and ansible_distribution_version >= '7') or
+    (ansible_os_family == 'Debian' and ansible_distribution_version >= '7') or
+    (ansible_os_family == 'Fedora' and ansible_distribution_version >= '15') 
 
 - name: enable service
   service:
